# Image_Matching_Comparison_Delfines2026

./: .gitignore  .pre-comit-config.yaml  00_introduccion.md  00_setup_check.py  01_aliked_lightglue.py  02_gradio_app.py  CONTRIBUTE.MD  CONTRIBUTE.md  INSTALL.md  README.md  check_exif.py  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt  setup.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml
configs/: config.toml
docs/: arquitectura.md  datasets.md  reproducibilidad.md
src/: 00_setup_check.py  benchmarks.py  dataset_imc.py  dataset_interface.py  dataset_megadepth.py  dino_matching.py  emparejamiento.py  gradio_interfaz.py  metrics.py  run_gradio.bat  run_gradio.ps1  run_pipeline.py  visualization.py
src/pipelines/: aliked_lightglue.py  disk_lightglue.py  sift_lightglue.py  superpoint_lightglue.py  xfeat_lightglue.py
src/utils/: config.py  cudnn.py  geometry.py  image.py
tests/: conftest.py  test_dataset_interface.py  test_metrics.py
