[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "image-matching"
version = "0.1.0"
description = "Framework for image matching, benchmarking and visualization."
requires-python = ">=3.12"

################################################################################
# Ruff
################################################################################

[tool.ruff]
line-length = 88
target-version = "py312"

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "outputs",
    "datasets",
    "src/models",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # import sorting
    "B",   # flake8-bugbear
]

ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

################################################################################
# Pytest
################################################################################

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
